image for Super-Auto plan updated

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 						</div>
 						<div class="col-sm-4">
 							<div class="pricing-box">
-								<img src="images/starter.svg" alt="Super-Auto">
+								<img src="images/super.png" alt="Super-Auto">
 								<h6 class="font-weight-medium title-text">Super-Auto</h6>
 								<h3 class="text-amount mb-4 mt-2">Rs<mark> 555/മാസം</mark></h3>
 								<ul class="pricing-list">
